deployment/kubernetes/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: ftgo-production
spec:
  mtls:
    mode: STRICT
